group project submit

--- a/notebooks/Gordon analysis.ipynb
+++ b/notebooks/Gordon analysis.ipynb
@@ -16,22 +16,10 @@
    },
    "source": [
     "# Interests\r",
-    "-which players are the most valuable player on the court.\n",
-    "-what factor can help the team perform well.\n",
-    "-Which player can mostly impact the game.e."
+    "-What kind of defensive ability can be defined as an elite defender?\n",
+    "-Which team has the most powerful overall average defensive ability (Analyzing with raptor_box_defense)\n",
+    "-Which team has the most competitive ability in the league?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
