group project submit

--- a/analysis2.ipynb
+++ b/analysis2.ipynb
@@ -3,7 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f5285c63-f13e-46f5-bc2f-1669f5803abb",
+   "id": "df198a1b-42b3-4d7d-bc37-eb857788ca22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Research Question:\n",
+    "#What kind of defensive ability can be defined as an elite defender?\n",
+    "#Which team has the most powerful overall average defensive ability\n",
+    "#Which team has the most competitive ability in the league?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "0c6930bf-be77-4146-b3dd-7fe939146828",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import function2 as p1"
+    "import project_function2 as p1"
    ]
   },
   {
