--- a/notebooks/analysis2.ipynb
+++ b/notebooks/analysis2.ipynb
@@ -1707,8 +1707,8 @@
     "# To become an average defender in the league must have -0.36 on the raptor box defense.\n",
     "# top 25% and the bottom 25% have a different score of 3.4 in raptor box defense.\n",
     "\n",
-    "\n",
-    "\n"
+    "#This graph can help us explain my question-1 \"What kind of defensive ability can be defined as an elite defender?\". To become an average defender in the league must have -0.36 on the raptor box defense. For top 25% of the defender, player should have a raptor box defense higher than 1.32. \n",
+    "#Players like Bam Adebayo (raptor box defense 2.06) can be define as a elite defender"
    ]
   },
   {
@@ -2136,10 +2136,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Which team has the most powerful overall average defensive ability (Analyzing with raptor_box_defense)\n",
+    "#This graaph can explain the second question:Which team has the most powerful overall average defensive ability (Analyzing with raptor_box_defense)\n",
+    "# I collected all players data and create each teams' weightedaverage defensive rating. I found that only 8 teams has a positive rating of defense, and MIA has the best defense ability.\n",
+    "\n",
     "# Miami Heat has the most powerful defense ability in the league.\n",
     "# Denver Nugget has the worst defense ability in the league.\n",
-    "# There are only 8 teams in the league that has a consistent on defensive, which has a positive score."
+    "# There are only 8 teams in the league that has a consistent on defensive, which has a positive score.\n"
    ]
   },
   {
@@ -2176,8 +2178,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Which team has the most competitive ability in the league? (Analyzing with raptor_box_defense and raptor_box_offense)\n",
-    "# All teams are inconsistent with the offense, the value is low.\n",
+    "#The third graph can explian the third question  : Which team has the most competitive ability in the league? (Analyzing with raptor_box_defense and raptor_box_offense)\n",
+    "# All teams are inconsistent with the offense, the value is low.  (Negative number)\n",
     "# Washington Wizzard has the lowest offensive ability.\n",
     "# Lakers, Bulls, and Heat have the best (offense and defense) ability in the league."
    ]
